# fusionforce

./: .gitignore  LICENSE  README.md
fusionforce/docker/: Dockerfile  Makefile
fusionforce/docs/: INSTALL.md  TERRAIN_ENCODER.md
fusionforce/examples/: bevfusion.ipynb  physics_engine.ipynb  voxelnet.ipynb
fusionforce/scripts/: eval.py  eval.sh  fit_terrain.py  robot_control.py  run.py  train.py  train.sh
fusionforce/src/fusionforce/: losses.py  ros.py  utils.py
fusionforce/src/fusionforce/datasets/: rough.py
fusionforce_demos/: CMakeLists.txt  dependencies.rosinstall  package.xml
fusionforce_demos/config/rviz/: fusionforce_rough.rviz
fusionforce_demos/launch/: elevation_mapping_cupy.launch  elevation_mapping_dphys.launch  fusionforce_rough.launch  husky_gazebo_elevation_mapping_dphys.launch  husky_gazebo_fusionforce.launch
fusionforce_demos/nodes/: fusionforce_demo
fusionforce_demos/scripts/: demo.sh
fusionforce_gazebo/: CMakeLists.txt  package.xml
fusionforce_gazebo/launch/: husky_gazebo.launch
fusionforce_gazebo/urdf/: husky.urdf.xacro
fusionforce_navigation/: CMakeLists.txt  package.xml
fusionforce_navigation/config/elevation_mapping_cupy/core/: core_param.yaml  example_setup.yaml
fusionforce_navigation/config/elevation_mapping_cupy/setups/husky/: plugin_config.yaml  semantics_image.yaml  semantics_pointcloud.yaml  simple.yaml
fusionforce_navigation/config/elevation_mapping_cupy/setups/marv/: core.yaml  sensors.yaml
fusionforce_navigation/launch/: elevation_mapping.launch  path_follower.launch  path_selector.launch  record.launch
fusionforce_ros/: CMakeLists.txt  package.xml  setup.py
fusionforce_ros/launch/: fusionforce.launch  physics_engine.launch  terrain_encoder.launch
fusionforce_ros/nodes/: fusionforce_node.py  physics_engine.py  terrain_encoder.py
