<?xml version="1.0"?>
<package format="2">
  <name>fusionforce_gazebo</name>
  <version>0.0.1</version>
  <description>Gazebo simulator models and launchers for FusionForce navigation pipeline</description>

  <maintainer email="agishrus@felk.cvut.cz">Ruslan Agishev</maintainer>
  <license>MIT</license>
  <url type="website">https://github.com/ctu-vras/fusionforce</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>gazebo_ros</depend>
  <depend>std_msgs</depend>
  <depend>ros_numpy</depend>
  <depend>visualization_msgs</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>
  <depend>husky_description</depend>
  <depend>husky_control</depend>
  <depend>realsense2_description</depend>

  <export>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
    <gazebo_ros gazebo_media_path="${prefix}/worlds"/>
  </export>
</package>