<?xml version="1.0"?>
<package format="2">
  <name>fusionforce_navigation</name>
  <version>0.0.1</version>
  <description>FusionForce navigation pipeline</description>

  <maintainer email="agishrus@felk.cvut.cz">Ruslan Agishev</maintainer>
  <license>MIT</license>
  <url type="website">https://github.com/ctu-vras/fusionforce</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>grid_map_msgs</depend>
  <depend>ros_numpy</depend>
  <depend>grid_map_rviz_plugin</depend>
  <depend>visualization_msgs</depend>

</package>